<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FreeTimeActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:showDividers="middle"
            android:divider="@drawable/empty_tall_divider"
            android:padding="10dp"
            android:id="@+id/linearLayout" app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_for_task"
                android:layout_marginBottom="5dp"/>

        <TimePicker android:id="@+id/tp"
                    android:layout_width="match_parent"
                    android:timePickerMode="spinner"
                    android:layout_height="wrap_content">
        </TimePicker>

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/offer_free_time"
                android:onClick="onClickOfferFreeTime"/>

        <TextView
                android:id="@+id/free_time_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free_time"
                android:layout_marginBottom="5dp"/>

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ok" android:onClick="onClickOk"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>